syntax = "proto3";

package shorturls.management.messages.v1;

option go_package = "messages/v1";

message DeleteShortURLByOrganizationIDResponse {}
